Path Routing/sonarqube-ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: nginx
    creationTimestamp: "2024-05-23T12:28:27Z"
    generation: 1
    name: sonarqube-ingress
    namespace: sonarqube
    resourceVersion: "2514827"
    uid: 46612431-d07e-4f4e-a5ea-a01c79fc74bb
  spec:
    ingressClassName: nginx
    rules:
    - host: uc.exlservice.com
      http:
        paths:
        - backend:
            service:
              name: sonarqube-sonarqube
              port:
                number: 9000
          path: /sonarqube
          pathType: Prefix
